[package]
name = "ast_pyo3"
version = "0.0.0"
description = "Python bindings to semantics ast"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "qasm3_ast"
crate-type = ["cdylib"]
doctest = false

# I think we want to disable for testing
[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
hashbrown = { version = "0.14" }
boolenum = "0.1"
pyo3 = { version = "0.19.2", features = ["extension-module"] }
# features = ["abi3-py38"] }
semantic_ast.workspace = true

# [dev-dependencies]
# clap = { version = "4.0", features = ["derive"] }
