[package]
name = "oq3_lexer"
description = "Lexer for OpenQASM 3 parser/analyzer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
unicode-xid = "0.2.6"

[dependencies.unicode-properties]
version = "0.1.3"
default-features = false
features = ["emoji"]

[dev-dependencies]
expect-test = "1.5.1"
