[package]
name = "oq3_parser"
description = "Parser for OpenQASM 3 parser/analyzer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
oq3_lexer.workspace = true
drop_bomb = "0.1.5"
limit = { version = "0.0.229", package = "ra_ap_limit" }

[dev-dependencies]
expect-test = "1.5.1"
