[package]
name = "oq3_source_file"
description = "Manage parsing OQ3 source files, included files, and reporting diagnotics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
ariadne = { version = "0.3.0", features = ["auto-color"] }
oq3_syntax.workspace = true
