[package]
name = "oq3_syntax"
version = "0.0.0"
description = "Comment and whitespace preserving parser for the OpenQASM 3 language"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
# external crates
cov-mark = "2.0.0-pre.1"
either = "1.7.0"
indexmap = "2.0.0"
itertools = "0.10.5"
once_cell = "1.17.0"
rowan = "0.15.11"
rustc-hash = "1.1.0"
smol_str = "0.2.0"
triomphe = { version = "0.1.8", default-features = false, features = ["std"] }

# local crates
lexer.workspace = true
parser.workspace = true
sourcegen.workspace = true
stdx = { version = "0.0.188", package = "ra_ap_stdx"}

[dev-dependencies]
rayon = "1.6.1"
expect-test = "1.4.0"
proc-macro2 = "1.0.47"
quote = "1.0.20"
ungrammar = "1.16.1"
clap = { version = "4.0", features = ["derive"] }
