[package]
name = "oq3_syntax"
description = "Comment and whitespace preserving parser for the OpenQASM 3 parser/analyzer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
# external crates
cov-mark = "2.0.0"
either = "1.15.0"
indexmap = "2.8.0"
once_cell = "1.21.0"
rowan = {version = "<=0.16.1"}
rustc-hash = "2.1.1"
smol_str = "0.3.2"
triomphe = { version = "<= 0.1.14", default-features = false, features = ["std"] }
rustversion = "1.0"
# local crates
oq3_lexer.workspace = true
oq3_parser.workspace = true

[dev-dependencies]
rayon = "1.6.1"
expect-test = "1.4.0"
clap = { version = "~4.4", features = ["derive"] }

[build-dependencies]
itertools = "0.14.0"
proc-macro2 = "1.0.47"
quote = "1.0.20"
ungrammar = "1.16.1"
xshell = "0.2.2"

[features]
sourcegen = []
