[package]
name = "qasm3_bytecode"
description = "Bytecode for OQ3 and Python bindings"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lib]
name = "qasm3_bytecode"
crate-type = ["cdylib"]
doctest = false

# I think we want to disable for testing
[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
hashbrown = { version = "0.14" }
boolenum = "0.1"
pyo3 = { version = "0.19.2", features = ["extension-module"] }
# features = ["abi3-py38"] }
oq3_semantics.workspace = true

# [dev-dependencies]
# clap = { version = "4.0", features = ["derive"] }
