[package]
name = "semantic_ast"
version = "0.0.0"
description = "AST with semantic information for OpenQASM 3"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
source_file.workspace = true
hashbrown = { version = "0.14" }
rowan = "0.15.11"
oq3_syntax.workspace = true
boolenum = "0.1"

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }
oq3_lexer.workspace = true
oq3_parser.workspace = true

