[package]
name = "semantics"
version = "0.0.0"
description = "AST with semantic information for OpenQASM 3"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
oq3_syntax.workspace = true
source_file.workspace = true
hashbrown = { version = "0.14" }
rowan = "0.15.11"
boolenum = "0.1"

[dev-dependencies]
clap = { version = "4.0", features = ["derive"] }
lexer.workspace = true
parser.workspace = true

