[package]
name = "oq3_sourcegen"
description = "TBD"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
xshell = "0.2.2"
